# foobar

./: .editorconfig  .gitignore  flake.nix  license.txt  meson.build  readme.md
nix/: package.nix
pub/: foobar.1  teatime.conf
res/: meson.build
res/icons/: README.md  icons.gresource.xml  meson.build
res/styles/: _common.scss  default.scss  meson.build  monokai-pro.scss  styles.gresource.xml  teatime.scss
res/styles/partials/: _base.scss  _control-center.scss  _launcher.scss  _notification.scss  _panel.scss
src/: application.c  application.h  control-center.c  control-center.h  launcher-item.c  launcher-item.h  launcher.c  launcher.h  main.c  meson.build  notification-area.c  notification-area.h  panel.c  panel.h  utils.c  utils.h
src/dbus/: com.github.hannesschulze.foobar.xml  meson.build  org.bluez.xml
src/services/: application-service.c  application-service.h  audio-service.c  audio-service.h  battery-service.c  battery-service.h  bluetooth-service.c  bluetooth-service.h  brightness-service.c  brightness-service.h  clock-service.c  clock-service.h  configuration-service.c  configuration-service.h  meson.build  network-service.c  network-service.h  notification-service.c  notification-service.h  quick-answer-service.c  quick-answer-service.h  workspace-service.c  workspace-service.h
src/services/quick-answers/: math-lexer.c  math-parser.c  math.c  math.h  math.test.c  meson.build
src/widgets/: inset-container.c  inset-container.h  limit-container.c  limit-container.h  meson.build  notification-widget.c  notification-widget.h
src/widgets/control-center/: control-button.c  control-button.h  control-details-item.c  control-details-item.h  control-details.c  control-details.h  control-slider.c  control-slider.h  meson.build
src/widgets/panel/: meson.build  panel-item-clock.c  panel-item-clock.h  panel-item-icon.c  panel-item-icon.h  panel-item-status.c  panel-item-status.h  panel-item-workspaces.c  panel-item-workspaces.h  panel-item.c  panel-item.h
subprojects/: gtk4-layer-shell.wrap  gvc.wrap  mutest.wrap
